--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,41 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
-# dependencies
+# Swap the comments on the following lines if you wish to use zero-installs
+# In that case, don't forget to run `yarn config set enableGlobalCache false`!
+# Documentation here: https://yarnpkg.com/features/caching#zero-installs
+
+#!.yarn/cache
+.pnp.*
 /node_modules
-/.pnp
-.pnp.js
 
 # testing
 /coverage
 
 # production
 /dist
+/dist-tsup
 
 # misc
 .DS_Store
+*.pem
 
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+debug/*
 
+# rollup
+.rollup.cache
+
+# ide
+.vscode
 .idea
+
+# typescript
+*.tsbuildinfo
