--- a/package.json
+++ b/package.json
@@ -1,4 +1,96 @@
 {
-  "name": "nepali-number-js",
+  "name": "nepali-number",
+  "version": "1.0.4",
+  "description": "Conversion and transliteration of English to Nepali numbers (devanagari) and vice versa",
+  "keywords": [
+    "nepali",
+    "english",
+    "number",
+    "digit",
+    "conversion",
+    "devanagari"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/puncoz-official/nepali-number-js"
+  },
+  "bugs": {
+    "url": "https://github.com/puncoz-official/nepali-number-js/issues"
+  },
+  "homepage": "https://github.com/puncoz-official/nepali-number-js",
+  "author": {
+    "name": "Puncoz Nepal",
+    "url": "https://puncoz.com/",
+    "email": "info@puncoz.com"
+  },
+  "main": "./dist/nepali-number.cjs.js",
+  "module": "./dist/nepali-number.esm.js",
+  "types": "./dist/nepali-number.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/nepali-number.cjs.js",
+      "import": "./dist/nepali-number.esm.js",
+      "types": "./dist/nepali-number.d.ts",
+      "default": "./dist/nepali-number.umd.js"
+    },
+    "./iife": {
+      "import": "./dist/nepali-number.iife.js",
+      "types": "./dist/nepali-number.d.ts"
+    },
+    "./cjs": {
+      "require": "./dist/nepali-number.cjs.js",
+      "types": "./dist/nepali-number.d.cts"
+    }
+  },
+  "files": [
+    "dist"
+  ],
+  "engines": {
+    "node": ">=18.12.0",
+    "npm": "please-use-yarn",
+    "yarn": ">=4.5.3"
+  },
+  "type": "module",
+  "sideEffects": false,
+  "scripts": {
+    "postinstall": "husky",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --disable",
+    "clean": "del dist .rollup.cache debug",
+    "clean:fresh": "yarn clean && del node_modules yarn.lock",
+    "lint": "eslint --flag unstable_ts_config",
+    "encode": "tsx ./src/encode.ts",
+    "build-tsup": "tsup",
+    "build": "yarn clean && rollup --config rollup.config.ts --configPlugin typescript --bundleConfigAsCjs"
+  },
+  "devDependencies": {
+    "@eslint/compat": "^1.2.3",
+    "@eslint/js": "^9.15.0",
+    "@rollup/plugin-commonjs": "^28.0.1",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-typescript": "^12.1.1",
+    "@types/node": "^22.9.3",
+    "@typescript-eslint/parser": "^8.16.0",
+    "del-cli": "^6.0.0",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.7",
+    "jiti": "^2.4.0",
+    "lint-staged": "^15.2.10",
+    "pinst": "^3.0.0",
+    "prettier": "^3.4.1",
+    "rollup": "^4.27.4",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.8.1",
+    "tsup": "^8.3.5",
+    "tsx": "^4.19.2",
+    "typescript": "~5.6",
+    "typescript-eslint": "^8.15.0"
+  },
   "packageManager": "yarn@4.5.3"
 }
