--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "clean": "del dist dist-tsup .rollup.cache debug",
     "clean:fresh": "yarn clean && del node_modules yarn.lock",
     "lint": "eslint --flag unstable_ts_config",
+    "test": "vitest run",
+    "coverage": "yarn test --coverage",
     "encode": "tsx ./src/encode.ts",
     "build-tsup": "tsup",
     "build": "yarn clean && rollup --config rollup.config.ts --configPlugin typescript --bundleConfigAsCjs"
@@ -72,6 +74,7 @@
     "@rollup/plugin-typescript": "^12.1.1",
     "@types/node": "^22.9.3",
     "@typescript-eslint/parser": "^8.16.0",
+    "@vitest/coverage-v8": "2.1.6",
     "del-cli": "^6.0.0",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
@@ -90,7 +93,9 @@
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "~5.6",
-    "typescript-eslint": "^8.15.0"
+    "typescript-eslint": "^8.15.0",
+    "vite-tsconfig-paths": "^5.1.3",
+    "vitest": "^2.1.6"
   },
   "packageManager": "yarn@4.5.3"
 }
